# Data_Analytic_Chat_Tool

./: Cosmos-query.sql  ParserCD224.vb  README.md
backend/: .env.conf.template  .env.example  .gitignore  AI Chat history.txt  API_GUIDE.md  AZURE_OPENAI_MIGRATION.md  DEPLOYMENT.md  Dockerfile  HIERARCHICAL_PARTITION_KEYS_UPDATE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  METADATA_DRIVEN_QUERY_GUIDE.md  Metadata_driven_changes.md  QUICKSTART.md  README.md  README_NEW.md  delete_data.py  docker-compose.yml  myenv.7z  pyproject.toml  requirements.txt  run.py  seed_data.py  test_pk_logic.py
backend/sample_data/: README.md  cyber-auth.csv  cyber-auth.json  financial_data.csv  financial_data.json  gold_data.csv  gold_data.json  mif1.json  pinDebitsummary.csv  synthetic_cyber_auth_3.json  tsys auth synthetic small.json  users.csv  users.json
backend/src/: main.py
backend/src/agents/: __init__.py  base_agent.py  data_retrieval_agent.py  orchestrator.py  query_understanding_agent.py  recommendation_agent.py  response_generation_agent.py
backend/src/api/: __init__.py  analytics.py  chat.py  health.py  users.py
backend/src/models/: __init__.py  conversation.py  message.py  user.py
backend/src/services/: __init__.py  cosmos_service.py  llm_service.py  memory_service.py  metadata_service.py  rag_service.py
backend/src/tools/: __init__.py  analytics_tool.py  base_tool.py  cosmos_db_tool.py  vector_search_tool.py
backend/src/utils/: __init__.py  config.py  cosmos_bulk_operations.py  data_seeder.py  logger.py
backend/tests/: conftest.py  test_basic.py
(+10 files in other folders)
